<?xml version="1.0"?>
<package>
  <name>omnidirectional_rig</name>
  <version>0.0.0</version>
  <description>The omnidirectional_rig package</description>

  <maintainer email="deray.jeremie@gmail.com">Jeremie Deray</maintainer>

  <license>BSD</license>

  <url type="git">??</url>

  <author email="deray.jeremie@gmail.com">Jeremie Deray</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
