<?xml version="1.0"?>
<package>
  <name>leobot_control</name>
  <version>0.0.1</version>
  <description>The leobot_control package</description>
  <maintainer email="ROS.Ukraine@todo.todo">ROS Ukraine Community</maintainer>
  <maintainer email="Andriy.Petlovanyy@todo.todo">Andriy Petlovanyy</maintainer>
  <maintainer email="SystemDi@todo.todo">SystemDi</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/ros-ukraine/leobot</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>ridgeback_control</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>teleop_twist_keyboard</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>twist_mux</run_depend>
</package>