<?xml version="1.0"?>
<package format="2">
  <name>leobot_control</name>
  <version>0.0.1</version>
  <description>The leobot_control package</description>

  <maintainer email="ROS.Ukraine@todo.todo">ROS Ukraine Community</maintainer>

  <author>Andriy Petlovanyy</author>
  <author>SystemDi</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ridgeback_control</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>twist_mux</exec_depend>
</package>