<?xml version="1.0"?>
<package format="2">
  <name>leobot_description</name>
  <version>0.0.1</version>
  <description>The leobot_description package</description>

  <maintainer email="ROS.Ukraine@todo.todo">ROS Ukraine Community</maintainer>
  <author>Andriy Petlovanyy</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
