<?xml version="1.0"?>
<package format="2">
  <name>leobot_gazebo</name>
  <version>0.0.1</version>
  <description>The leobot_gazebo package</description>

  <maintainer email="ROS.Ukraine@todo.todo">ROS Ukraine Community</maintainer>
  <author>Andriy Petlovanyy</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>
  <exec_depend>ridgeback_gazebo_plugins</exec_depend>
  <exec_depend>leobot_description</exec_depend>

  <export>
    <gazebo_ros
        gazebo_plugin_path="${prefix}/lib"
        gazebo_model_path="${prefix}/.." />
  </export>
</package>
