<?xml version="1.0"?>
<package format="2">
  <name>leobot_hardware</name>
  <version>0.0.1</version>
  <description>The leobot_hardware package</description>

  <maintainer email="ROS.Ukraine@todo.todo">ROS Ukraine Community</maintainer>
  <author>Andriy Petlovanyy</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>leobot_msgs</depend>
  <exec_depend>rosserial_python</exec_depend>
</package>
