<?xml version="1.0"?>
<package format="2">
  <name>leobot_java</name>
  <version>0.1.0</version>
  <description>This package contains Java Examples for LeoBot</description>

  <maintainer email="ROS.Ukraine@todo.todo">ROS Ukraine Community</maintainer>
  <author>Andriy Petlovanyy</author>

  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_build_tools</build_depend>

</package>
