<?xml version="1.0"?>
<package>
  <name>leobot_launch</name>
  <version>0.0.1</version>
  <description>The leobot_launch package</description>
  <maintainer email="Andriy.Petlovanyy@todo.todo">Andriy Petlovanyy</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>leobot_description</run_depend>
  <run_depend>leobot_gazebo</run_depend>
  <run_depend>rosserial_python</run_depend>
</package>
