<?xml version="1.0"?>
<package format="2">
  <name>leobot_launch</name>
  <version>0.0.1</version>
  <description>The leobot_launch package</description>

  <maintainer email="ROS.Ukraine@todo.todo">ROS Ukraine Community</maintainer>
  <author>Andriy Petlovanyy</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>leobot_description</exec_depend>
  <exec_depend>leobot_gazebo</exec_depend>
  <exec_depend>leobot_hardware</exec_depend>
</package>
