<?xml version="1.0"?>
<package format="2">
  <name>leobot_lidar</name>
  <version>0.0.1</version>
  <description>The leobot_lidar package</description>
  <maintainer email="Andriy.Petlovanyy@todo.todo">Andriy Petlovanyy</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
</package>
