<?xml version="1.0"?>
<package format="2">
  <name>leobot_web_server</name>
  <version>0.0.1</version>
  <description>This package starts the web server for LeoBot</description>

  <maintainer email="ROS.Ukraine@todo.todo">ROS Ukraine Community</maintainer>
  <author>Andriy Petlovanyy</author>
  <author>Max Zhaloba</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>nodejs</depend>
  <depend>nodejs-legacy</depend>
  <depend>npm</depend>
  <exec_depend>web_video_server</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
</package>
